--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "develop": "node server.js",
-    "build": "webpack --config ./webpack.dev.config.js"
+    "dev-build": "webpack --config ./webpack.dev.config.js",
+    "prod-build": "webpack --config ./webpack.prod.config.js"
   },
   "keywords": [
     "boilerplate",
@@ -15,6 +16,7 @@
   "author": "Bradley Stafford",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.0.12",
     "babel-core": "^5.8.29",
     "babel-loader": "^5.3.2",
     "express": "^4.13.3",
