--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "babel": "^6.0.12",
     "babel-core": "^5.8.29",
     "babel-loader": "^5.3.2",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0",
+    "eslint-plugin-react": "^3.15.0",
     "express": "^4.13.3",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
