--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "develop": "node server.js",
+    "lint": "eslint .",
     "build-dev": "webpack --config ./webpack.dev.config.js",
     "build-prod": "webpack --config ./webpack.prod.config.js"
   },
@@ -20,8 +21,7 @@
     "babel-core": "^5.8.29",
     "babel-loader": "^5.3.2",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^3.1.0",
-    "eslint-plugin-react": "^3.15.0",
+    "eslint-config-google": "^0.3.0",
     "express": "^4.13.3",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
